--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>This is a yellow page for Richmond Hill neiboughood</h1>
+<h1>Hello, this is a yellow page for Richmond Hill neiboughood</h1>
 <h1>这是一个专门为列治文山居民提供便利的网站</h1>
 <!-- <p>I'm hosted with GitHub Pages.</p> -->
 </body>
