--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@ layout: default
 <html>
 <body>
   <p>
-    <a href="https://register.cpso.on.ca/Advanced-Search/">家庭医生</a>
+    <a href="https://register.cpso.on.ca/Advanced-Search/" target="_blank">家庭医生</a>
+    <a href="https://bomingbaidental.com/our-team" target="_blank">牙医</a>
+  </p>
+  <p>
+    <a href="https://lso.ca/public-resources/finding-a-lawyer-or-paralegal/law-society-referral-service" target="_blank">免费律师咨询</a>
+    <a href="https://www.college-ic.ca/protecting-the-public/find-an-immigration-consultant" target="_blank">移民留学律师</a>
+    <a href="https://lso.ca/public-resources/finding-a-lawyer-or-paralegal/directory-search/results?fc=membercitynormalized%7CRichmond%20Hill" target="_blank">律师查询</a>
+  </p>
+  <p>
+    <a href="https://itools-ioutils.fcac-acfc.gc.ca/MC-CH/MCCalc-CHCalc-eng.aspx" target="_blank">贷款计算器</a>
   </p>
 </body>
 </html>
