--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <html>
 <body>
   <p>
-    <a href="https://register.cpso.on.ca/Advanced-Search/" target="_blank">家庭医生</a> |
+    <a href="https://register.cpso.on.ca/Advanced-Search/" target="_blank"><img src="images/doctor.png" alt="家庭医生" width="150" height="100"></a> |
     <a href="https://bomingbaidental.com/our-team" target="_blank">牙医</a>
   </p>
   <p>
