--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@ layout: default
 <html>
 <body>
   <p>
-    <a href="https://register.cpso.on.ca/Advanced-Search/" target="_blank"><img src="images/doctor.png" alt="家庭医生" width="150" height="150">家庭医生</a> 
-    <a href="https://bomingbaidental.com/our-team" target="_blank"><img src="images/dentist.png" alt="牙医" width="150" height="150">牙医</a>
+    <a href="https://register.cpso.on.ca/Advanced-Search/" target="_blank"><img src="images/doctor.png" alt="家庭医生" width="150" height="150"></a> 
+    <a href="https://bomingbaidental.com/our-team" target="_blank"><img src="images/dentist.png" alt="牙医" width="150" height="150"></a>
   </p>
+  <br>
+  <tr>
+    <td>家庭医生</td>
+    <td>牙医</td>
+  </tr>
   <p>
     <a href="https://lso.ca/public-resources/finding-a-lawyer-or-paralegal/law-society-referral-service" target="_blank">免费律师咨询</a> |
     <a href="https://www.college-ic.ca/protecting-the-public/find-an-immigration-consultant" target="_blank">移民留学律师</a> |
