--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@ layout: default
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+* {box-sizing: border-box;}
+
 .container {
   position: relative;
   width: 50%;
+  max-width: 300px;
 }
 
 .image {
@@ -17,32 +21,22 @@ layout: default
 }
 
 .overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
+  position: absolute; 
+  bottom: 0; 
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5); /* Black see-through */
+  color: #f1f1f1; 
   width: 100%;
-  opacity: 0;
   transition: .5s ease;
-  background-color: #008CBA;
+  opacity:0;
+  color: white;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
 }
 
 .container:hover .overlay {
   opacity: 1;
-}
-
-.text {
-  color: white;
-  font-size: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  text-align: center;
 }
 </style>
 </head>
