--- a/index.html
+++ b/index.html
@@ -74,14 +74,49 @@ div.desc {
 </div>
 <!--     <a href="https://register.cpso.on.ca/Advanced-Search/" target="_blank"><img src="images/doctor.png" alt="家庭医生" width="150" height="150"></a> -->
 <!--     <a href="https://bomingbaidental.com/our-team" target="_blank"><img src="images/dentist.png" alt="牙医" width="150" height="150"></a> -->
-  </p> 
-  <p>
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="https://lso.ca/public-resources/finding-a-lawyer-or-paralegal/law-society-referral-service">
+      <img src="images/lawyer.png" alt="lawyer" width="150" height="150">
+    </a>
+    <div class="desc">免费律师咨询</div>
+  </div>
+</div>
+
+  <div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="https://lso.ca/public-resources/finding-a-lawyer-or-paralegal/law-society-referral-service">
+      <img src="images/lawyer2.png" alt="lawyer2" width="150" height="150">
+    </a>
+    <div class="desc">移民留学律师</div>
+  </div>
+</div>
+
+  <div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="https://lso.ca/public-resources/finding-a-lawyer-or-paralegal/directory-search/results?fc=membercitynormalized%7CRichmond%20Hill">
+      <img src="images/lawyer.png" alt="lawyer search" width="150" height="150">
+    </a>
+    <div class="desc">律师查询</div>
+  </div>
+</div>
+
+   <div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="https://itools-ioutils.fcac-acfc.gc.ca/MC-CH/MCCalc-CHCalc-eng.aspx">
+      <img src="images/mortgage.svg" alt="mortgage calculator" width="150" height="150">
+    </a>
+    <div class="desc">贷款计算器</div>
+  </div>
+</div> 
+  
+<!--   <p>
     <a href="https://lso.ca/public-resources/finding-a-lawyer-or-paralegal/law-society-referral-service" target="_blank">免费律师咨询</a> |
     <a href="https://www.college-ic.ca/protecting-the-public/find-an-immigration-consultant" target="_blank">移民留学律师</a> |
     <a href="https://lso.ca/public-resources/finding-a-lawyer-or-paralegal/directory-search/results?fc=membercitynormalized%7CRichmond%20Hill" target="_blank">律师查询</a>
   </p>
   <p>
     <a href="https://itools-ioutils.fcac-acfc.gc.ca/MC-CH/MCCalc-CHCalc-eng.aspx" target="_blank">贷款计算器</a>
-  </p>
+  </p> -->
 </body>
 </html>
