--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@ div.gallery:hover {
 
 div.gallery img {
   width: 150;
-  height: 150;
+  height: auto;
+/*   width: 100%;
+  height: auto; */
 }
 
 div.desc {
