--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ div.desc {
   <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://eservices.richmondhill.ca/whatgoeswhere/">
-      <img src="images/whatgoeswhere.svg" alt="what goes where calculator" width="150" height="150">
+      <img src="images/whatgoeswhere.png" alt="what goes where" width="150" height="150">
     </a>
     <div class="desc">垃圾分类查询</div>
   </div>
