--- a/index.html
+++ b/index.html
@@ -103,6 +103,16 @@ div.desc {
   </div>
 </div>
 
+  <div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="https://findacontractor.esasafe.com/">
+      <img src="images/esa.png" alt="lawyer search" width="150" height="150">
+    </a>
+    <div class="desc">持牌电工查询</div>
+  </div>
+</div>
+  
+
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://itools-ioutils.fcac-acfc.gc.ca/MC-CH/MCCalc-CHCalc-eng.aspx">
