--- a/index.html
+++ b/index.html
@@ -130,6 +130,51 @@ div.desc {
     <div class="desc">垃圾分类查询</div>
   </div>
 </div> 
+
+  <div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="https://www.richmondhill.ca/en/shared-content/resources/documents/2025-Waste-Management-Calendar.pdf">
+      <img src="images/garbageCalendar.png" alt="garbage calendar" width="150" height="150">
+    </a>
+    <div class="desc">收垃圾日历</div>
+  </div>
+</div> 
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="https://www.richmondhill.ca/en/living-here/Water-Services.aspx">
+      <img src="images/water.png" alt="water" width="150" height="150">
+    </a>
+    <div class="desc">水费网站</div>
+  </div>
+</div> 
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="https://myalectra.alectrautilities.com/portal/#/login">
+      <img src="images/alectra.png" alt="alectra" width="150" height="150">
+    </a>
+    <div class="desc">电费网站</div>
+  </div>
+</div> 
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="https://myaccount.enbridgegas.com/“>
+      <img src="images/enbridge.png" alt="alectra" width="150" height="150">
+    </a>
+    <div class="desc">气费网站</div>
+  </div>
+</div> 
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="https://www.mpac.ca“>
+      <img src="images/mpac.png" alt="alectra" width="150" height="150">
+    </a>
+    <div class="desc">了解你的房子</div>
+  </div>
+</div> 
   
 <!--   <p>
     <a href="https://lso.ca/public-resources/finding-a-lawyer-or-paralegal/law-society-referral-service" target="_blank">免费律师咨询</a> |
