--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ div.desc {
   <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://www.richmondhill.ca/en/shared-content/resources/documents/2025-Waste-Management-Calendar.pdf">
-      <img src="images/garbageCalendar.png" alt="garbage calendar" width="150" height="150">
+      <img src="images/garbage.png" alt="garbage calendar" width="150" height="150">
     </a>
     <div class="desc">收垃圾日历</div>
   </div>
