--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ div.desc {
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="https://myaccount.enbridgegas.com/“>
+    <a target="_blank" href="https://myaccount.enbridgegas.com/">
       <img src="images/enbridge.png" alt="enbridge" width="150" height="150">
     </a>
     <div class="desc">气费网站</div>
@@ -169,7 +169,7 @@ div.desc {
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="https://www.mpac.ca“>
+    <a target="_blank" href="https://www.mpac.ca">
       <img src="images/mpac.png" alt="mpac" width="150" height="150">
     </a>
     <div class="desc">了解你的房子</div>
