--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ div.desc {
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="https://www.richmondhill.ca/en/living-here/Water-Services.aspx">
+    <a target="_blank" href="https://waterbill.richmondhill.ca/app/login.jsp">
       <img src="images/water.png" alt="water" width="150" height="150">
     </a>
     <div class="desc">水费网站</div>
