--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@ div.gallery {
   border: 1px solid #ccc;
 }
 
-div.gallery:hover {
+div.gallery:hover {javascript:void(0)
   border: 1px solid #777;
 }
 
 div.gallery img {
-  width: 150;
-  height: 150;
-/*   width: 100%;
-  height: auto; */
+   width: 100%;
+  height: auto; 
 }
 
 div.desc {
@@ -60,7 +58,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://register.cpso.on.ca/Advanced-Search/">
-      <img src="images/doctor.png" alt="doctor" width="150" height="150">
+      <img src="images/doctor.png" alt="doctor" width="150" height="100">
     </a>
     <div class="desc">家庭医生</div>
   </div>
@@ -69,7 +67,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://bomingbaidental.com/our-team">
-      <img src="images/dentist.png" alt="doctor" width="150" height="150">
+      <img src="images/dentist.png" alt="doctor" width="150" height="100">
     </a>
     <div class="desc">牙医</div>
   </div>
@@ -79,7 +77,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://lso.ca/public-resources/finding-a-lawyer-or-paralegal/law-society-referral-service">
-      <img src="images/lawyer.png" alt="lawyer" width="150" height="150">
+      <img src="images/lawyer.png" alt="lawyer" width="150" height="100">
     </a>
     <div class="desc">免费律师咨询</div>
   </div>
@@ -88,7 +86,7 @@ div.desc {
   <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://lso.ca/public-resources/finding-a-lawyer-or-paralegal/law-society-referral-service">
-      <img src="images/lawyer2.png" alt="lawyer2" width="150" height="150">
+      <img src="images/lawyer2.png" alt="lawyer2" width="150" height="100">
     </a>
     <div class="desc">移民留学律师</div>
   </div>
@@ -97,7 +95,7 @@ div.desc {
   <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://lso.ca/public-resources/finding-a-lawyer-or-paralegal/directory-search/results?fc=membercitynormalized%7CRichmond%20Hill">
-      <img src="images/lawyer.png" alt="lawyer search" width="150" height="150">
+      <img src="images/lawyer.png" alt="lawyer search" width="150" height="100">
     </a>
     <div class="desc">律师查询</div>
   </div>
@@ -106,7 +104,7 @@ div.desc {
   <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://findacontractor.esasafe.com/">
-      <img src="images/esa.png" alt="lawyer search" width="150" height="150">
+      <img src="images/esa.png" alt="lawyer search" width="150" height="100">
     </a>
     <div class="desc">持牌电工查询</div>
   </div>
@@ -116,7 +114,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://itools-ioutils.fcac-acfc.gc.ca/MC-CH/MCCalc-CHCalc-eng.aspx">
-      <img src="images/mortgage.svg" alt="mortgage calculator" width="150" height="150">
+      <img src="images/mortgage.svg" alt="mortgage calculator" width="150" height="100">
     </a>
     <div class="desc">贷款计算器</div>
   </div>
@@ -125,7 +123,7 @@ div.desc {
   <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://eservices.richmondhill.ca/whatgoeswhere/">
-      <img src="images/whatgoeswhere.png" alt="what goes where" width="150" height="150">
+      <img src="images/whatgoeswhere.png" alt="what goes where" width="150" height="100">
     </a>
     <div class="desc">垃圾分类查询</div>
   </div>
@@ -134,7 +132,7 @@ div.desc {
   <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://www.richmondhill.ca/en/shared-content/resources/documents/2025-Waste-Management-Calendar.pdf">
-      <img src="images/garbage.png" alt="garbage calendar" width="150" height="150">
+      <img src="images/garbage.png" alt="garbage calendar" width="150" height="100">
     </a>
     <div class="desc">收垃圾日历</div>
   </div>
@@ -143,7 +141,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://waterbill.richmondhill.ca/app/login.jsp">
-      <img src="images/water.png" alt="water" width="150" height="150">
+      <img src="images/water.png" alt="water" width="150" height="100">
     </a>
     <div class="desc">水费网站</div>
   </div>
@@ -152,7 +150,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://myalectra.alectrautilities.com/portal/#/login">
-      <img src="images/alectra.png" alt="alectra" width="150" height="150">
+      <img src="images/alectra.png" alt="alectra" width="150" height="100">
     </a>
     <div class="desc">电费网站</div>
   </div>
@@ -161,7 +159,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://myaccount.enbridgegas.com/">
-      <img src="images/enbridge.png" alt="enbridge" width="150" height="150">
+      <img src="images/enbridge.png" alt="enbridge" width="150" height="100">
     </a>
     <div class="desc">气费网站</div>
   </div>
@@ -170,7 +168,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://www.mpac.ca">
-      <img src="images/mpac.png" alt="mpac" width="150" height="150">
+      <img src="images/mpac.png" alt="mpac" width="150" height="100">
     </a>
     <div class="desc">了解你的房子</div>
   </div>
