--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ div.gallery:hover {javascript:void(0)
 }
 
 div.gallery img {
-   width: 120;
-  height: 80; 
+   width: 150;
+  height: 100; 
 }
 
 div.desc {
@@ -58,7 +58,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://register.cpso.on.ca/Advanced-Search/">
-      <img src="images/doctor.png" alt="doctor" width="300" width="200">
+      <img src="images/doctor.png" alt="doctor" width="150" height="100">
     </a>
     <div class="desc">家庭医生</div>
   </div>
@@ -67,17 +67,17 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://bomingbaidental.com/our-team">
-      <img src="images/dentist.png" alt="doctor" width="300" width="200">
+      <img src="images/dentist.png" alt="doctor" width="150" height="100">
     </a>
     <div class="desc">牙医</div>
   </div>
 </div>
-<!--     <a href="https://register.cpso.on.ca/Advanced-Search/" target="_blank"><img src="images/doctor.png" alt="家庭医生" width="300" height="150"></a> -->
-<!--     <a href="https://bomingbaidental.com/our-team" target="_blank"><img src="images/dentist.png" alt="牙医" width="300" height="150"></a> -->
+<!--     <a href="https://register.cpso.on.ca/Advanced-Search/" target="_blank"><img src="images/doctor.png" alt="家庭医生" width="150" height="150"></a> -->
+<!--     <a href="https://bomingbaidental.com/our-team" target="_blank"><img src="images/dentist.png" alt="牙医" width="150" height="150"></a> -->
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://lso.ca/public-resources/finding-a-lawyer-or-paralegal/law-society-referral-service">
-      <img src="images/lawyer.png" alt="lawyer" width="300" width="200">
+      <img src="images/lawyer.png" alt="lawyer" width="150" height="100">
     </a>
     <div class="desc">免费律师咨询</div>
   </div>
@@ -86,7 +86,7 @@ div.desc {
   <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://lso.ca/public-resources/finding-a-lawyer-or-paralegal/law-society-referral-service">
-      <img src="images/lawyer2.png" alt="lawyer2" width="300" width="200">
+      <img src="images/lawyer2.png" alt="lawyer2" width="150" height="100">
     </a>
     <div class="desc">移民留学律师</div>
   </div>
@@ -95,7 +95,7 @@ div.desc {
   <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://lso.ca/public-resources/finding-a-lawyer-or-paralegal/directory-search/results?fc=membercitynormalized%7CRichmond%20Hill">
-      <img src="images/lawyer.png" alt="lawyer search" width="300" width="200">
+      <img src="images/lawyer.png" alt="lawyer search" width="150" height="100">
     </a>
     <div class="desc">律师查询</div>
   </div>
@@ -104,7 +104,7 @@ div.desc {
   <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://findacontractor.esasafe.com/">
-      <img src="images/esa.png" alt="lawyer search" width="300" width="200">
+      <img src="images/esa.png" alt="lawyer search" width="150" height="100">
     </a>
     <div class="desc">持牌电工查询</div>
   </div>
@@ -114,7 +114,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://itools-ioutils.fcac-acfc.gc.ca/MC-CH/MCCalc-CHCalc-eng.aspx">
-      <img src="images/mortgage.svg" alt="mortgage calculator" width="300" width="200">
+      <img src="images/mortgage.svg" alt="mortgage calculator" width="150" height="100">
     </a>
     <div class="desc">贷款计算器</div>
   </div>
@@ -123,7 +123,7 @@ div.desc {
   <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://eservices.richmondhill.ca/whatgoeswhere/">
-      <img src="images/whatgoeswhere.png" alt="what goes where" width="300" width="200">
+      <img src="images/whatgoeswhere.png" alt="what goes where" width="150" height="100">
     </a>
     <div class="desc">垃圾分类查询</div>
   </div>
@@ -132,7 +132,7 @@ div.desc {
   <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://www.richmondhill.ca/en/shared-content/resources/documents/2025-Waste-Management-Calendar.pdf">
-      <img src="images/garbage.png" alt="garbage calendar" width="300" width="200">
+      <img src="images/garbage.png" alt="garbage calendar" width="150" height="100">
     </a>
     <div class="desc">收垃圾日历</div>
   </div>
@@ -141,7 +141,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://waterbill.richmondhill.ca/app/login.jsp">
-      <img src="images/water.png" alt="water" width="300" width="200">
+      <img src="images/water.png" alt="water" width="150" height="100">
     </a>
     <div class="desc">水费网站</div>
   </div>
@@ -150,7 +150,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://myalectra.alectrautilities.com/portal/#/login">
-      <img src="images/alectra.png" alt="alectra" width="300" width="200">
+      <img src="images/alectra.png" alt="alectra" width="150" height="100">
     </a>
     <div class="desc">电费网站</div>
   </div>
@@ -159,7 +159,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://myaccount.enbridgegas.com/">
-      <img src="images/enbridge.png" alt="enbridge" width="300" width="200">
+      <img src="images/enbridge.png" alt="enbridge" width="150" height="100">
     </a>
     <div class="desc">气费网站</div>
   </div>
@@ -168,7 +168,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://www.mpac.ca">
-      <img src="images/mpac.png" alt="mpac" width="300" width="200">
+      <img src="images/mpac.png" alt="mpac" width="150" height="100">
     </a>
     <div class="desc">了解你的房子</div>
   </div>
