--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://bomingbaidental.com/our-team">
-      <img src="images/dentist.png" alt="doctor" width="150" height="100">
+      <img src="images/dentist.png" alt="dentist" width="150" height="100">
     </a>
     <div class="desc">牙医</div>
   </div>
@@ -77,7 +77,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://lso.ca/public-resources/finding-a-lawyer-or-paralegal/law-society-referral-service">
-      <img src="images/lawyer.png" alt="lawyer" width="150" height="100">
+      <img src="images/lawyer.png" alt="free lawyer" width="150" height="100">
     </a>
     <div class="desc">免费律师咨询</div>
   </div>
@@ -86,7 +86,7 @@ div.desc {
   <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://lso.ca/public-resources/finding-a-lawyer-or-paralegal/law-society-referral-service">
-      <img src="images/lawyer2.png" alt="lawyer2" width="150" height="100">
+      <img src="images/lawyer2.png" alt="immigrate lawyer" width="150" height="100">
     </a>
     <div class="desc">移民留学律师</div>
   </div>
@@ -104,7 +104,7 @@ div.desc {
   <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://findacontractor.esasafe.com/">
-      <img src="images/esa.png" alt="lawyer search" width="150" height="100">
+      <img src="images/esa.png" alt="registered electrician" width="150" height="100">
     </a>
     <div class="desc">持牌电工查询</div>
   </div>
