--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ div.desc {
 
   <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="https://lso.ca/public-resources/finding-a-lawyer-or-paralegal/law-society-referral-service">
+    <a target="_blank" href="https://www.college-ic.ca/protecting-the-public/find-an-immigration-consultant">
       <img src="images/lawyer2.png" alt="immigrate lawyer" width="150" height="100">
     </a>
     <div class="desc">移民留学律师</div>
